# pathos-public

./: cmake_msvc.cmd  planned_features.txt
engine/: system.cfg
engine/pathos/: gameinfo.toml
engine/pathos/particles/: abyss_bigclouds.json  abyss_farclouds.json  acidbottle_clouds.json  acidbottle_cluster.json  acidbottle_droplets.json  acidbottle_glass_flecks1.json  acidbottle_glass_flecks2.json  acidbottle_glass_flecks3.json  acidbottle_splashes1.json  acidbottle_splashes2.json  angel.json  ash_ground.json  ashfall.json  biomass_particles.json  blood_effects_cluster.json  blood_effects_cluster_living.json  blood_effects_cluster_player.json  blood_effects_decap.json  bm_blood_core.json  bm_blood_drops1.json  bm_blood_drops2.json  bm_blood_drops3.json  bm_nodule_cluster.json  bullet_tracer.json  carpet_impact_cluster.json  cluster_impact_metal.json  cluster_impact_ricochet.json  coldhaze.json  coldhaze_big.json  coldhaze_xl.json  concrete_impact_cluster.json  custer_disappear_cluster.json  custer_hit_cluster.json  custer_hit_core.json  dirt_impact_cluster.json  dt06_smoke.json  dt_skyclouds.json  dt_skyclouds_south.json  effect_distort.json  (+193 more)
source/: CMakeLists.txt  CompilationSettings.cmake
source/clientdll/: CMakeLists.txt  animevents.cpp  animevents.h  clientdll.cpp  clientdll.h  cliententities.cpp  cliententities.h  clientusermsgs.cpp  clshared.cpp  clshared.h  entitymanager.cpp  entitymanager.h  gameuidocumentswindow.cpp  gameuidocumentswindow.h  gameuielements.cpp  gameuielements.h  gameuikeypadwindow.cpp  gameuikeypadwindow.h  gameuiloginwindow.cpp  gameuiloginwindow.h  gameuimanager.cpp  gameuimanager.h  gameuiobjectiveswindow.cpp  gameuiobjectiveswindow.h  gameuisubwaywindow.cpp  gameuisubwaywindow.h  gameuitextwindow.cpp  gameuitextwindow.h  gameuiwindows_shared.h  hud.cpp  hud.h  huddraw.cpp  huddraw.h  input.cpp  input.h  ladder.cpp  ladder.h  messages.cpp  messages.h  motorbike.cpp  (+14 more)
source/common/: TinyJSON.h  aldformat.h  animevent.h  bmp.cpp  bmp.h  bspv30file.h  cache_model.h  carray.h  carray_inline.hpp  cbitset.cpp  cbitset.h  cbitset_inline.hpp  cbuffer.cpp  cbuffer.h  cbuffer_inline.hpp  cl_entity.h  clinkedlist.h  clinkedlist_inline.hpp  com_math.h  com_math_inline.hpp  common.cpp  common.h  common_inline.hpp  constants.h  crc32.cpp  crc32.h  cstring.cpp  cstring.h  cstring_inline.hpp  cstringpool.h  cstringpool_inline.hpp  datatypes.h  dds.cpp  dds.h  entitydata.h  file_interface.h  filechunk.h  hashlist.h  hashlist_inline.hpp  logfile.cpp  (+29 more)
source/engine/: CMakeLists.txt  ald.cpp  ald.h  brushmodel.cpp  brushmodel.h  commands.cpp  commands.h  config.cpp  config.h  console.cpp  console.h  dllexports.cpp  dllexports.h  edictmanager.cpp  edictmanager.h  enginefuncs.cpp  enginefuncs.h  enginestate.h  file.cpp  file.h  filewriterthread.cpp  filewriterthread.h  input.cpp  input.h  main.cpp  mcdtrace.cpp  mcdtrace.h  modelcache.cpp  modelcache.h  net_mp.cpp  net_mp.h  net_sp.cpp  net_sp.h  networking.cpp  networking.h  savefile.h  saverestore.cpp  saverestore.h  sprite.cpp  sprite.h  (+23 more)
source/engine/bsp/: bsp_shared.cpp  bsp_shared.h  bspv30.cpp  bspv30.h  pbspv1.cpp  pbspv1.h  pbspv2.cpp  pbspv2.h
source/engine/client/: cl_cmd.cpp  cl_efx.cpp  cl_efx.h  cl_main.cpp  cl_main.h  cl_msg.cpp  cl_msg.h  cl_pmove.cpp  cl_pmove.h  cl_predict.cpp  cl_resource.cpp  cl_snd.cpp  cl_snd.h  cl_tempentities.cpp  cl_tempentities.h  cl_utils.cpp  cl_utils.h
source/engine/renderer/: r_beams.cpp  r_beams.h  r_blackhole.cpp  r_blackhole.h  r_bsp.cpp  r_bsp.h  r_cables.cpp  r_cables.h  r_cubemaps.cpp  r_cubemaps.h  r_decals.cpp  r_decals.h  r_dlights.cpp  r_dlights.h  r_fbocache.cpp  r_fbocache.h  r_glowaura.cpp  r_glowaura.h  r_glqueries.cpp  r_glqueries.h  r_interfacefuncs.cpp  r_interfacefuncs.h  r_legacyparticles.cpp  r_legacyparticles.h  r_lensflare.cpp  r_lensflare.h  r_lightstyles.cpp  r_lightstyles.h  r_main.cpp  r_main.h  r_menu.cpp  r_menu.h  r_mirror.cpp  r_mirror.h  r_monitor.cpp  r_monitor.h  r_nsmoothing.cpp  r_nsmoothing.h  r_particles.cpp  r_particles.h  (+20 more)
source/engine/server/: sv_entities.cpp  sv_entities.h  sv_main.cpp  sv_main.h  sv_msg.cpp  sv_msg.h  sv_physics.cpp  sv_physics.h  sv_world.cpp  sv_world.h
source/engine/ui/: ui_shared.h  uielements.cpp  uielements.h
source/engine/windows/: uiconsolewindow.cpp  uiconsolewindow.h  uidownloadwindow.cpp  uidownloadwindow.h  uiexitwindow.cpp  uiexitwindow.h  uinewgamewindow.cpp  uinewgamewindow.h  uisaveloadwindow.cpp  uisaveloadwindow.h  uisettingswindow.cpp  uisettingswindow.h
source/gamedll/: CMakeLists.txt  ai_basenpc.cpp  ai_basenpc.h  ai_common.h  ai_militianpc.cpp  ai_militianpc.h  ai_nodegraph.cpp  ai_nodegraph.h  ai_patrolnpc.cpp  ai_patrolnpc.h  ai_schedule.cpp  ai_schedule.h  ai_schedule_inline.hpp  ai_schedules.cpp  ai_sounds.cpp  ai_sounds.h  ai_squadnpc.cpp  ai_squadnpc.h  ai_talknpc.cpp  ai_talknpc.h  ai_tasks.cpp  ai_tasks.h  ai_turretnpc.cpp  ai_turretnpc.h  ai_wandernpc.cpp  ai_wandernpc.h  aiflagtoggler.cpp  aiflagtoggler.h  aisetenemy.cpp  aisetenemy.h  aisetfollowtarget.cpp  aisetfollowtarget.h  aisettriggercondition.cpp  aisettriggercondition.h  aiwandercontroller.cpp  aiwandercontroller.h  ambientgeneric.cpp  ambientgeneric.h  ambientoggstream.cpp  ambientoggstream.h  (+370 more)
source/libs/: CMakeLists.txt
source/libs/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
source/libs/stb/: stb_image.c
source/libs/tinyjson/: LICENSE  README.md  TinyJSON.cpp
source/shared/: activity.h  activitymappings.cpp  animinfo.h  beam_shared.h  bike_shared.h  blackhole_shared.h  brushmodel_shared.h  cldll_interface.h  collision_shared.cpp  collision_shared.h  cvar.cpp  cvar.h  decallist.cpp  decallist.h  dlight.h  edict.h  efxapi.h  entity_extrainfo.h  entity_state.h  flex_shared.h  flexmanager.cpp  flexmanager.h  fontset.h  frustum.cpp  frustum.h  frustum_inline.hpp  gameui_shared.h  gamevars.h  gdll_interface.h  includes.h  ladder_shared.h  mcdformat.h  mlight.h  monitor_shared.h  platforms.h  playermove.cpp  playermove.h  pm_shared.h  portal_shared.h  r_basic_vertex.h  (+32 more)
(+39 files in other folders)
