project(libs LANGUAGES CXX)

add_library(${PROJECT_NAME} STATIC)

file(GLOB_RECURSE LIBS_CSOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
target_sources(${PROJECT_NAME} PRIVATE ${LIBS_CSOURCES})
source_group("Libs" FILES ${LIBS_CSOURCES})

file(GLOB_RECURSE LIBS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${LIBS_SOURCES})
source_group("Libs" FILES ${LIBS_SOURCES})

file(GLOB_RECURSE LIBS_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
target_sources(${PROJECT_NAME} PRIVATE ${LIBS_HEADERS})
source_group("Libs" FILES ${LIBS_HEADERS})

target_include_directories(${PROJECT_NAME} PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/imgui
	${CMAKE_CURRENT_SOURCE_DIR}/miniz
	${CMAKE_CURRENT_SOURCE_DIR}/stb
	${CMAKE_CURRENT_SOURCE_DIR}/tinyjson
	${CMAKE_CURRENT_SOURCE_DIR}/rygsdxtc)